FreeST/test/Programs/InvalidTests/SessionTypes/invalidInChoice/inChoice.fst
fun : &{L1: !Int} -> Int
fun c = select L1 c
